--- a/.env.template
+++ b/.env.template
@@ -18,9 +18,9 @@ TURN_PASSWORD=lemon123
 
 # API
 # The response will give you a entrypoint / Room URL for your meeting.
-# curl -X POST "http://localhost:3000/api/v1/meeting" -H  "authorization: mirotalk_default_secret" -H  "Content-Type: application/json"
+# curl -X POST "http://localhost:3000/api/v1/meeting" -H  "authorization: sasta_default_secret" -H  "Content-Type: application/json"
 
-API_KEY_SECRET=mirotalk_default_secret
+API_KEY_SECRET=sasta_default_secret
 
 # Heroku
 # https://devcenter.heroku.com/articles/config-vars
