--- a/.env.template
+++ b/.env.template
@@ -11,7 +11,7 @@ NGROK_AUTH_TOKEN=23Vobinfx7KTInAaEmkRxpQl96O_5v5RCLk9oc26PXBnmdoAg
 # 2. Create an account
 # 3. Check: https://webrtc.github.io/samples/src/content/peerconnection/trickle-ice/
 
-TURN_ENABLED=true|false
+TURN_ENABLED=true
 TURN_URLS=turn:numb.viagenie.ca
 TURN_USERNAME=aditya.kumar466.ak@gmail.com
 TURN_PASSWORD=lemon123
