--- a/.env.template
+++ b/.env.template
@@ -12,7 +12,7 @@ NGROK_AUTH_TOKEN=23Vobinfx7KTInAaEmkRxpQl96O_5v5RCLk9oc26PXBnmdoAg
 # 3. Check: https://webrtc.github.io/samples/src/content/peerconnection/trickle-ice/
 
 TURN_ENABLED=true
-TURN_URLS=turn:numb.viagenie.ca
+TURN_URLS=turn:numb.viagenie.ca?transport=tcp
 TURN_USERNAME=aditya.kumar466.ak@gmail.com
 TURN_PASSWORD=lemon123
 
