--- a/.env.template
+++ b/.env.template
@@ -3,7 +3,7 @@
 # 2. Get started for free
 # 3. Copy YourNgrokAuthToken: https://dashboard.ngrok.com/get-started/your-authtoken
 
-NGROK_ENABLED=true|false
+NGROK_ENABLED=true
 NGROK_AUTH_TOKEN=23Vobinfx7KTInAaEmkRxpQl96O_5v5RCLk9oc26PXBnmdoAg
 
 # Turn
