--- a/.env.template
+++ b/.env.template
@@ -3,7 +3,7 @@
 # 2. Get started for free
 # 3. Copy YourNgrokAuthToken: https://dashboard.ngrok.com/get-started/your-authtoken
 
-NGROK_ENABLED=false
+NGROK_ENABLED=true
 NGROK_AUTH_TOKEN=23Vobinfx7KTInAaEmkRxpQl96O_5v5RCLk9oc26PXBnmdoAg
 
 # Turn
@@ -11,10 +11,15 @@ NGROK_AUTH_TOKEN=23Vobinfx7KTInAaEmkRxpQl96O_5v5RCLk9oc26PXBnmdoAg
 # 2. Create an account
 # 3. Check: https://webrtc.github.io/samples/src/content/peerconnection/trickle-ice/
 
-TURN_ENABLED=false
+TURN_ENABLED=true
 TURN_URLS=turn:numb.viagenie.ca
 TURN_USERNAME=aditya.kumar466.ak@gmail.com
 TURN_PASSWORD=lemon123
+VUE_APP_STUN_URL=stun:turn01.brie.fi:5349
+
+VUE_APP_TURN_URL=turn:turn01.brie.fi:5349
+VUE_APP_TURN_USER=brie
+VUE_APP_TURN_PASSWORD=fi
 
 # API
 # The response will give you a entrypoint / Room URL for your meeting.
