--- a/.env.template
+++ b/.env.template
@@ -15,7 +15,7 @@ TURN_ENABLED=true
 TURN_URLS=turn:numb.viagenie.ca
 TURN_USERNAME=aditya.kumar466.ak@gmail.com
 TURN_PASSWORD=lemon123
-VUE_APP_STUN_URL=stun.nextcloud.com:443
+VUE_APP_STUN_URL=stun:turn01.brie.fi:5349
 
 VUE_APP_TURN_URL=turn:turn01.brie.fi:5349
 VUE_APP_TURN_USER=brie
